--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
   },
   "pkg": {
     "assets": [
-      "lib/ffmpeg.exe"
+      "lib/ffmpeg.exe",
+      ".token",
+      "node_modules/@discordjs/opus/**/*",
+      "node_modules/sodium/**/*"
     ],
     "outputPath": "dist",
     "targets": [
