--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "src/app.ts",
   "bin": "out/pkg.js",
   "scripts": {
-    "build": "npm run build:clean && npm run build:tsc && npm run build:pkg && npm run build:rename",
+    "build": "npm run build:clean && npm run build:tsc && npm run build:pkg && npm run build:icon && npm run build:rename",
     "build:clean": "npx del-cli out & npx del-cli dist",
     "build:tsc": "npx tsc",
-    "build:rename": "npx renamer --find audio-warp --replace AudioWarp dist/*.exe",
     "build:pkg": "npx pkg package.json",
+    "build:icon": "node scripts/icon.js",
+    "build:rename": "node scripts/rename.js",
     "run-dev": "npx ts-node ."
   },
   "author": "Tim 'Piepmatz' Hesse",
@@ -18,7 +19,9 @@
     "@types/inquirer": "^7.3.3",
     "@types/node": "^16.4.13",
     "del-cli": "^4.0.1",
+    "git-last-commit": "^1.0.0",
     "pkg": "^5.3.1",
+    "rcedit": "^3.0.1",
     "renamer": "^3.2.1",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
