--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
     "@discordjs/voice": "^0.5.6",
+    "chalk": "^4.1.2",
     "cli-select": "^1.1.2",
     "discord.js": "^13.0.1",
     "ffmpeg-static": "^4.4.0",
     "inquirer": "^8.1.2",
     "naudiodon": "^2.3.5",
+    "ora": "^5.4.1",
     "prism-media": "^1.3.2",
     "sodium": "^3.0.2"
   },
