--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "audio-warp",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "A tool to warp your music input to Discord.",
   "keywords": [
     "warp",
@@ -23,6 +23,7 @@
   "author": "Tim 'Piepmatz' Hesse",
   "license": "MIT",
   "devDependencies": {
+    "@types/discord-rich-presence": "^0.0.0",
     "@types/inquirer": "^7.3.3",
     "@types/node": "^16.6.1",
     "del-cli": "^4.0.1",
@@ -38,6 +39,7 @@
     "@discordjs/voice": "^0.6.0",
     "chalk": "^4.1.2",
     "cli-select": "^1.1.2",
+    "discord-rich-presence": "^0.0.8",
     "discord.js": "^13.1.0",
     "ffmpeg-static": "^4.4.0",
     "inquirer": "^8.1.2",
