--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "audio-warp",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A tool to warp your music input to Discord.",
   "keywords": [
     "warp",
@@ -24,18 +24,18 @@
   "license": "MIT",
   "devDependencies": {
     "@types/discord-rich-presence": "^0.0.0",
-    "@types/inquirer": "^7.3.3",
-    "@types/node": "^16.6.1",
+    "@types/inquirer": "^8.1.1",
+    "@types/node": "^16.7.13",
     "del-cli": "^4.0.1",
-    "git-last-commit": "^1.0.0",
+    "git-last-commit": "^1.0.1",
     "pkg": "^5.3.1",
     "rcedit": "^3.0.1",
-    "renamer": "^3.2.1",
-    "ts-node": "^10.2.0",
-    "typescript": "^4.3.5"
+    "renamer": "^4.0.0",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.5.3",
+    "@discordjs/opus": "^0.6.0",
     "@discordjs/voice": "^0.6.0",
     "chalk": "^4.1.2",
     "cli-select": "^1.1.2",
@@ -44,7 +44,7 @@
     "ffmpeg-static": "^4.4.0",
     "inquirer": "^8.1.2",
     "naudiodon": "^2.3.5",
-    "ora": "^5.4.1",
+    "ora": "<6.0.0",
     "prism-media": "^1.3.2",
     "sodium": "^3.0.2"
   },
