--- a/package.json
+++ b/package.json
@@ -9,43 +9,49 @@
     "discord",
     "bot"
   ],
+  "type": "module",
   "main": "src/app.ts",
   "bin": "out/pkg.js",
   "scripts": {
-    "build": "npm run build:clean && npm run build:tsc && npm run build:icon && npm run build:pkg && npm run build:rename",
+    "build": "npm run build:primp && npm run build:clean && npm run build:tsc && npm run build:icon && npm run build:pkg && npm run build:rename",
+    "build:primp": "npx primp src -r",
     "build:clean": "npx del-cli out & npx del-cli dist",
     "build:tsc": "npx tsc",
-    "build:icon": "node scripts/icon.js",
+    "build:icon": "node scripts/icon.cjs",
     "build:pkg": "npx pkg package.json",
-    "build:rename": "node scripts/rename.js",
-    "run-dev": "npx ts-node ."
+    "build:rename": "node scripts/rename.cjs",
+    "run-dev": "node --loader ts-node/esm ."
   },
   "author": "Tim 'Piepmatz' Hesse",
   "license": "MIT",
   "devDependencies": {
     "@types/discord-rich-presence": "^0.0.0",
-    "@types/inquirer": "^8.1.1",
-    "@types/node": "^16.7.13",
-    "del-cli": "^4.0.1",
+    "@types/ffmpeg-static": "^3.0.1",
+    "@types/inquirer": "^9.0.1",
+    "@types/node": "^18.7.6",
+    "@vercel/ncc": "^0.34.0",
+    "del-cli": "^5.0.0",
     "git-last-commit": "^1.0.1",
-    "pkg": "^5.3.1",
+    "pkg": "^5.8.0",
+    "pretty-ts-imports": "^1.1.0",
     "rcedit": "^3.0.1",
     "renamer": "^4.0.0",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.6.0",
-    "@discordjs/voice": "^0.6.0",
-    "chalk": "^4.1.2",
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/voice": "^0.11.0",
+    "chalk": "^5.0.1",
     "cli-select": "^1.1.2",
+    "dirname-filename-esm": "^1.1.1",
     "discord-rich-presence": "^0.0.8",
-    "discord.js": "^13.1.0",
-    "ffmpeg-static": "^4.4.0",
-    "inquirer": "^8.1.2",
-    "naudiodon": "^2.3.5",
-    "ora": "<6.0.0",
-    "prism-media": "^1.3.2",
+    "discord.js": "^14.2.0",
+    "ffmpeg-static": "^5.0.2",
+    "inquirer": "^9.1.0",
+    "naudiodon": "^2.3.6",
+    "ora": "^6.1.2",
+    "prism-media": "^1.3.4",
     "robotjs": "^0.6.0",
     "sodium": "^3.0.2"
   },
@@ -58,7 +64,7 @@
     ],
     "outputPath": "dist",
     "targets": [
-      "node16-win-x64"
+      "latest-win-x64"
     ],
     "compress": "GZip"
   }
