--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "audio-warp",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A tool to warp your music input to Discord.",
   "keywords": [
     "warp",
@@ -13,12 +13,12 @@
   "main": "src/app.ts",
   "bin": "out/pkg.js",
   "scripts": {
-    "build": "npm run build:primp && npm run build:clean && npm run build:tsc && npm run build:icon && npm run build:pkg && npm run build:rename",
+    "build": "npm run build:primp && npm run build:clean && npm run build:tsc && npm run build:stub && npm run build:caxa && npm run build:rename",
     "build:primp": "npx primp src -r",
     "build:clean": "npx del-cli out & npx del-cli dist",
     "build:tsc": "npx tsc",
-    "build:icon": "node scripts/icon.cjs",
-    "build:pkg": "npx pkg package.json",
+    "build:stub": "node scripts/createStub.cjs",
+    "build:caxa": "npx caxa -i . -e dist -e icon -e readme_assets -e scripts -e social_preview -e src -e .git --stub out/stub.exe -o dist/audio-warp.exe \"{{caxa}}/node_modules/.bin/node\" \"{{caxa}}/out/app.js\"",
     "build:rename": "node scripts/rename.cjs",
     "run-dev": "node --loader ts-node/esm ."
   },
@@ -29,10 +29,10 @@
     "@types/ffmpeg-static": "^3.0.1",
     "@types/inquirer": "^9.0.1",
     "@types/node": "^18.7.6",
-    "@vercel/ncc": "^0.34.0",
+    "caxa": "^2.1.0",
+    "cpy-cli": "^4.1.0",
     "del-cli": "^5.0.0",
     "git-last-commit": "^1.0.1",
-    "pkg": "^5.8.0",
     "pretty-ts-imports": "^1.1.0",
     "rcedit": "^3.0.1",
     "renamer": "^4.0.0",
@@ -54,18 +54,5 @@
     "prism-media": "^1.3.4",
     "robotjs": "^0.6.0",
     "sodium": "^3.0.2"
-  },
-  "pkg": {
-    "assets": [
-      "lib/ffmpeg.exe",
-      ".token",
-      "node_modules/@discordjs/opus/**/*",
-      "node_modules/sodium/**/*"
-    ],
-    "outputPath": "dist",
-    "targets": [
-      "latest-win-x64"
-    ],
-    "compress": "GZip"
   }
 }
